Refactor string handling and improve comparison logic in logging classes
- Updated string checks in HttpLogData.java to use trim().isEmpty() for better whitespace handling.
- Changed Optional checks in HttpTiming.java from isEmpty() to isPresent() for improved clarity.
- Enhanced comparison logic in LogStringBuilder.java to use toString() for accurate log comparisons.
- Modified isEmpty() method in LogStringBuilder.java to check length instead of isEmpty() for consistency.