@@ -451,6 +451,6 @@ public class HttpLogData {
      * 判断字符串是否非空白
      */
     private static boolean isNotBlank(String str) {
-        return str != null && !str.isBlank();
+        return str != null && !str.trim().isEmpty();
     }
 }
